app/assets/stylesheets/infopages.scss
// Place all the styles related to the Infopages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

/* universal */

body {
  padding:0;
  margin:0;
  background-color:#F8FAFF;
}

header {
	display:block;
	font-family:"Helvetica";
	font-weight:bold;
	font-size:4em;
	color:white;
	background-color:#333;
	margin-top:0;
	margin-bottom:0;
	.header-name {
		margin-left:1%;
		p {
			margin-top:-1%;
			margin-bottom:0%;
			line-height:175%;
		}
	}
}

section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

.center {
  text-align: center;
}

.center h1 {
  margin-bottom: 10px;
}

a {
    text-decoration:none;
	cursor:pointer;
}

table{
    width: 90%;
	border-spacing: 30px;
}

th {
	//height: 500px;
}

td {
    max-width: 35%;
	vertical-align: top;
}

/* typography */

h1, h2, h3, h4, h5, h6 {
  font-family: 'Helvetica Neue';
  line-height: 250%;
  margin-bottom: 8px;
}

h1 {
  font-size: 3em;
  letter-spacing: -2px;
  margin-bottom: 30px;
  text-align: left;
}

h2 {
  font-size: 1.2em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
  color: #777;
}

.sections {
	padding:0;
	width: 24.75%;
	font-family: Courier;
	font-size: 1.5em;
	vertical-align: top;
	display: inline-block;
	background:#ECECF3;
	margin-top:0;
	margin-bottom:0;
	text-align: center;
	text-decoration:none;
	line-height:225%;
	a {
		color: inherit;
	}
}

.sections:hover {
	background:#DB4D4D;
	color:white;
}

.stretch {
	width: 100%;
	display: inline-block;
	font-size: 0;
	line-height: 0
}

.code-page {
	font-family: 'PT Mono';
	margin-left: 5%;
	margin-right: 8%;
	font-size: .9em;
	p {
		line-height:125%;
	}
	a {
		color:#DB4D4D;
		font-weight:bold;
	}
	a:hover {
		color:#800C0C;
		font-weight: bold;
	}
	#overview {
		margin-top: 2%;
		margin-bottom:2%;
	}
	#project_desc {
		width:50%;
		float:left;
		margin-bottom:5%;
	}
	#screenshot {
		display:inline;
		float:right;
		margin-bottom: 5%;
	}
}

.bio-page {
	font-family: 'Courier New';
	//color:white;
	margin-left: 5%;
	margin-right: 8%;
	font-size: 1.1em;
	p {
		text-indent:4%;
		line-height:160%;
	}
	a {
		color:#DB4D4D;
		font-weight:bold;
	}
	a:hover {
		color:#800C0C;
		font-weight: bold;
	}
}

#right{
	display:inline;
	float:right;
	width:48%;
	margin-bottom:5%;
}

#left {
	display:inline;
	float:left;
	width:48%;
	margin-bottom:5%;
}

.name {
	font-size: 1.5em;
}

.contact-info {
	margin-left:45%;
	margin-top: 10%;
	font-family: 'Courier';
	//color:white;
	font-size: 1.1em;
	a {
		color:#DB4D4D;
	}
	a:hover {
		font-weight: bold;
	}
	p {
		margin-top:3.5%;
		margin-bottom:3.5%;
	}
}

p {
  font-size: .9em;
  line-height: 125%;
  margin-top:1%;
  margin-bottom:1%;
}

ol {
    list-style:none;
    padding-left:0;
}

ul {
    list-style:none;
    padding-left:0;
}​​

/* header */

#logo {
  float: left;
  margin-right: 10px;
  font-size: 1.7em;
  color: #fff;
  text-transform: uppercase;
  letter-spacing: -1px;
  padding-top: 9px;
  font-weight: bold;
}

#logo:hover {
  color: #fff;
  text-decoration: none;
}

